corrigi os erros em game, e adicionei as restantes paginas

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <title>Steam Games app</title>
 <link rel = "stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-    <a href="/"> Home </a>
+<nav class = "barra">
+    <a style="text-decoration: none" href="/"> Home </a>
 </nav>
-<secttion class = "conteudo">
+<secttion class = "content">
     {% block content %}{% endblock %}
 </secttion>
