--- a/templates/game.html
+++ b/templates/game.html
@@ -7,7 +7,7 @@
 
 <p><b>Kind: </b><a style = "text-decoration:none" href="/kinds/{{ game.kind_id }}">{{ game.kind_id }}</a></p>
 
-<p><b>Title: </b>{{ game.name }}</p>
+<p><b>Name: </b>{{ game.name }}</p>
 
 <p><b>Year: </b>{{ game.release_date }}</p>
 
