--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,9 @@
+
+html {
+  scroll-behavior: smooth;
+}
+
+
 body {
   font-family: Helvetica, arial, sans-serif;
   font-size: 14px;
@@ -322,4 +328,24 @@ kbd {
   text-align: center;
   font-size: 30px;
   color: #cc0000;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
