--- a/templates/product-like.html
+++ b/templates/product-like.html
@@ -1,30 +1,25 @@
 {% extends 'base.html' %}
-
 {% block content %}
 
-<h1>DLCs</h1>
-
+<h1>Products Like "{{ text }} "</h1>
+{% if table %}
 <table>
     <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Game</th>
-        <th>Year</th>
+        <th>Product ID</th>
+        <th>Product Name</th>
+        <!-- Add more columns as needed -->
     </tr>
-
-    {% for dlc in dlcs %}
-
+    {% for row in table %}
     <tr>
-        <td><a style = "text-decoration:none" href="/dlcs/{{ dlc.product_id }}">{{ dlc.product_id }}</td>
-        <td>{{ dlc.name }}</td>
-        <td><a style = "text-decoration:none" href = "/games/{{ dlc.game_id }}">{{ dlc.product_id }}</a></td>
-        <td>{{ dlc.release_date }}</td>
-
+        <td>{{ row.product_id }}</td>
+        <td>{{ row.name }}</td>
+        <!-- Add more cells as needed -->
     </tr>
-
     {% endfor %}
-
 </table>
+{% else %}
+<p>No products found with name containing "{{ text }}"</p>
+{% endif %}
 
 <button onclick="topFunction()" id="myBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
     <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5"/>
